src/objects/Country__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>