src/objects/Country__c/fields/Country_JSON_Data__c.field-meta.xml
<CustomField>
    <fullName>Country_JSON_Data__c</fullName>
    <label>Country JSON Data</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>