src/objects/Country__c/fields/Total_Number_of_States__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_States__c</fullName>
    <label>Total Number of States</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>